<resources>
    <string name="app_name">Казань Поёт</string>
    <string name="_64kb">64kb</string>
    <string name="_128kb">128kb</string>
    <string name="_192kb">192kb</string>
    <string name="_320kb">320kb</string>
    <string name="name_toolbar">Казань Поет</string>
    <string name="_1">Дорожка 1</string>
    <string name="loading">...</string>
    <string name="share_body">Слушайте первое музыкальное онлайн-радио в Татарстане.
        Здесь звучат песни, которые больше нигде не звучат.
        https://play.google.com/store/apps/details?id=com.kazan.radiosings
    </string>
    <string name="share">share</string>
    <string name="aboutUs">about Us</string>
    <string name="Contacts">Контакты</string>
    <string name="link"><a href="https://www.kazansings.ru">kazansings.ru</a> </string>
    <string name="email"><a href="https://www.production@kazansings.ru">production@kazansings.ru</a> </string>
    <string name="vk"><a href="https://vk.me/join/AJQ1dxSPjSPs_1X5AHsBqPnf">Группа в VK</a> </string>
    <string name="wtsapp"><a href="https://chat.whatsapp.com/DcYXYr39xVLEbu9wGQtB5u">Группа в WhatsApp</a> </string>
    <string name="tg"><a href="https://t.me/kazanpoet">Группа в tg</a> </string>
    <string name="aboutUsActivity">О нас</string>
    <string name="share_googleplay_link">0</string>
    <string name="Pause">Pause</string>
    <string name="InfoAboutUs">
        «Казань поёт» – онлайн-радио, где круглосуточно
        звучит музыка артистов, которые считают своей
        родиной город Казань или всю солнечную Татарию.
        Челны, Альметьевск, Актаныш, Буинск, все остальные
        города республики и конечно, столица Казань - все
        самые крутые музыканты представляют свои лучшие песни
        на онлайн-радио Казань поёт. Здесь играют хиты тех
        артистов, которые живут по соседству, и на концерты
        которых вы можете попасть в любой момент.
        Музыкантам и слушателям больше не надо искать друг
        друга - все мы встречаемся на онлайн-радио «Казань поёт».
        Слушайте наших! Поддержите наших!
        Делитесь информацией о нас со всеми, кого вы знаете!
        Чем больше нас, тем ярче наши звезды!</string>

</resources>